@@ -1,3 +1,9 @@
+2007-10-01  Tambet Ingo  <tambet@gmail.com>
+
+	* src/applet.c (activate_device_cb): Implement a place holder which will show
+	a beautiful error dialog if device activation fails.
+	(nma_menu_item_activate): Use the new device activation method.
+
 2007-10-01  Jeremy Katz  <katzj@redhat.com>
 
 	* src/password-dialog.c, src/applet.glade:
